# mcp-oura

./: .gitignore  README.md  azure.yaml  pyproject.toml
infra/: main.bicep  main.parameters.json  resources.bicep
src/: app.py  requirements.txt
